# eppyphany

./: .gitignore  CMakeLists.txt  readme.md
include/DSP/: Analyzer.hpp  AudioLoader.hpp  Cepstrum.hpp  Separator.hpp
include/Difficulty/: DifficultyCalculator.hpp  ManiaDifficultyCalculator.hpp
include/Difficulty/Evaluators/: IndividualStrainEvaluator.hpp  OverallStrainEvaluator.hpp
include/Difficulty/Preprocessing/: DifficultyHitObject.hpp  ManiaDifficultyHitObject.hpp
include/Difficulty/Skills/: Skill.hpp  Strain.hpp  StrainDecaySkill.hpp  StrainSkill.hpp
include/Generation/: Composer.hpp  DSProcessor.hpp  Objects.hpp  PatternLibrary.hpp  dotosu.hpp
include/Utils/: MathUtils.hpp
lib/: CMakeLists.txt  main.cpp
lib/DSP/: Analyzer.cpp  AudioLoader.cpp  CMakeLists.txt  Cepstrum.cpp  Separator.cpp
lib/Difficulty/: CMakeLists.txt  DifficultyCalculator.cpp  ManiaDifficultyCalculator.cpp
lib/Difficulty/Evaluators/: CMakeLists.txt  IndividualStrainEvaluator.cpp  OverallStrainEvaluator.cpp
lib/Difficulty/Preprocessing/: CMakeLists.txt  DIfficultyHitObject.cpp  DifficultyHitObject.cpp  ManiaDifficultyHitObject.cpp
lib/Difficulty/Skills/: CMakeLists.txt  Skill.cpp  Strain.cpp  StrainDecaySkill.cpp  StrainSkill.cpp
lib/Generation/: CMakeLists.txt  Composer.cpp  DSProcessor.cpp  PatternLibrary.cpp  dotosu.cpp
lib/Utils/: CMakeLists.txt  MathUtils.cpp
